<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/dlm"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<com.sk.revisit2.webview.MyWebView
		android:id="@+id/mainWebView"
		android:layout_width="match_parent"
		android:layout_height="match_parent" />

	<LinearLayout
		android:id="@+id/llm"
		android:layout_width="240dp"
		android:layout_height="match_parent"
		android:layout_gravity="start"
		android:background="#EEEEEE"
		android:orientation="vertical"
		android:padding="5dp">

		<EditText
			android:id="@+id/urlEditText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:autofillHints="none"
			android:hint="@string/enter_a_url"
			android:imeOptions="actionDone"
			android:inputType="textUri"
			android:singleLine="true" />

		<androidx.appcompat.widget.SwitchCompat
			android:id="@+id/useInternet"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/use_internet" />

		<androidx.appcompat.widget.SwitchCompat
			android:id="@+id/shouldUpdate"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/keep_uptodate" />

	</LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>